--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-	<title>Salesforce Whatsapp Component</title>
+	<title>Enviar Whatsapp</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,11 +24,11 @@
 
 				<form class="login100-form validate-form">
 					<span class="login100-form-title">
-						Whatsapp HSM
+						Whatsapp
 					</span>
 
 					<div class="wrap-input100 validate-input" data-validate="O template é obrigatório">
-						<input class="input100" type="text" id="templateCode" placeholder="código do template*">
+						<input class="input100" type="text" id="templateCode" placeholder="Nome do template*">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-whatsapp" aria-hidden="true"></i>
@@ -36,7 +36,7 @@
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate="O campo do telefone é obrigatório">
-						<input class="input100" type="text" id="phoneFieldName" placeholder="campo de telefone*">
+						<input class="input100" type="text" id="phoneFieldName" placeholder="Campo de telefone (na DE)*">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-phone" aria-hidden="true"></i>
@@ -55,13 +55,6 @@
 						<button id="toggleActive" class="login100-form-btn">
 							Ativar
 						</button>
-					</div>
-
-					<div class="text-center p-t-136">
-						<a class="txt2" href="#" target="_blank">
-							Novo por aqui? Visite nossa Wiki.
-							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
-						</a>
 					</div>
 				</form>
 			</div>
