--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 		<div class="container-login100">
 			<div class="wrap-login100">
 				<div class="login100-pic js-tilt" data-tilt>
-					<img src="images/img-01.png" alt="IMG">
+					<img src="images/MATH_logo_claro.svg" alt="MATH">
 				</div>
 
 				<form class="login100-form validate-form">
@@ -27,33 +27,13 @@
 						Whatsapp
 					</span>
 
-					<div class="wrap-input100 validate-input" data-validate="O template é obrigatório">
-						<input class="input100" type="text" id="templateCode" placeholder="Nome do template*">
-						<span class="focus-input100"></span>
-						<span class="symbol-input100">
-							<i class="fa fa-whatsapp" aria-hidden="true"></i>
-						</span>
-					</div>
-
-					<div class="wrap-input100 validate-input" data-validate="O campo do telefone é obrigatório">
-						<input class="input100" type="text" id="phoneFieldName" placeholder="Campo de telefone (na DE)*">
-						<span class="focus-input100"></span>
-						<span class="symbol-input100">
-							<i class="fa fa-phone" aria-hidden="true"></i>
-						</span>
-					</div>
-
-					<div class="wrap-input100">
-						<input class="input100" type="text" id="parameterList" placeholder="parâmetros">
-						<span class="focus-input100"></span>
-						<span class="symbol-input100">
-							<i class="fa fa-paragraph" aria-hidden="true"></i>
-						</span>
+					<div class="wrap-input100 validate-input" data-validate="Insira um payload em JSON">
+						<textarea class="input100" id="payload" placeholder="Payload*" rows="50" cols="50">
 					</div>
 
 					<div class="container-login100-form-btn">
 						<button id="toggleActive" class="login100-form-btn">
-							Ativar
+							Salvar
 						</button>
 					</div>
 				</form>
