--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
 
 					<div class="wrap-input100 validate-input" data-validate="Insira um payload em JSON">
 						<textarea class="input100" id="payload" placeholder="Payload*" rows="50" cols="50">
+							Cole aqui o payload da sua API. Consulte a documentação para saber como incluir campos
+						</textarea>
 					</div>
 
 					<div class="container-login100-form-btn">
