--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-	<title>Enviar Whatsapp</title>
+	<title>MATH Journey API</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,12 +24,12 @@
 
 				<form class="login100-form validate-form">
 					<span class="login100-form-title">
-						Whatsapp
+						Cole sua chamada abaixo
 					</span>
 
 					<div class="wrap-input100 validate-input" data-validate="Insira um payload em JSON">
 						<textarea class="input100" id="payload" placeholder="Payload*" rows="50" cols="50">
-							Cole aqui o payload da sua API. Consulte a documentação para saber como incluir campos
+							Cole aqui o código da sua API (utilizando o Axios). Consulte a documentação para saber como incluir campos
 						</textarea>
 					</div>
 
