--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,22 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 
 	<script data-main="js/main.js" type="text/javascript" src="js/require.js"></script>
+	<script src="js/jquery.min.js"></script>
+
+	<!--Prism-->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.23.0/themes/prism-tomorrow.css"/>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-core.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/autoloader/prism-autoloader.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/line-numbers/prism-line-numbers.min.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/line-numbers/prism-line-numbers.min.css"/>
+
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/WebCoder49/code-input@2.0/code-input.css">
+	<script src="https://cdn.jsdelivr.net/gh/WebCoder49/code-input@2.0/code-input.js"></script>
+	<script src="https://cdn.jsdelivr.net/gh/WebCoder49/code-input@2.0/plugins/indent.min.js"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/WebCoder49/code-input@2.0/plugins/prism-line-numbers.min.css">
+	<script>
+	  codeInput.registerTemplate("code-input", codeInput.templates.prism(Prism, [new codeInput.plugins.Indent()]));
+	</script>
 </head>
 
 <body>
@@ -26,12 +42,9 @@
 					<span class="login100-form-title">
 						Cole sua chamada abaixo
 					</span>
-
-					<div class="wrap-input100 validate-input" data-validate="Insira um payload em JSON">
-						<textarea class="input100" id="payload" placeholder="Payload*" rows="50" cols="50">
-							Cole aqui o código da sua API (utilizando o Axios). Consulte a documentação para saber como incluir campos
-						</textarea>
-					</div>
+					<code-input required id="payload" class="line-numbers" style="resize: none;" lang="JavaScript" placeholder="Write some JavaScript!" template="code-input">//  Cole aqui o código da sua API
+// utilize o Axios
+// Consulte a documentação para saber mais</code-input>
 
 					<div class="container-login100-form-btn">
 						<button id="toggleActive" class="login100-form-btn">
@@ -43,8 +56,8 @@
 		</div>
 	</div>
 
-	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	
 
 </body>
 
