--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,8 @@
 					<span class="login100-form-title">
 						Cole sua chamada abaixo
 					</span>
+					<input type="text" placeholder="key">
+					<input type="text" placeholder="value">
 					<code-input required id="payload" class="line-numbers" style="resize: none;" lang="JavaScript" placeholder="Write some JavaScript!" template="code-input">//  Cole aqui o código da sua API
 // utilize o Axios
 // Consulte a documentação para saber mais</code-input>
