--- a/public/index.html
+++ b/public/index.html
@@ -509,7 +509,7 @@
         <div id="MainActivity"  class="container-fluid">
             <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
                 <div class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-decoration-none">
-                    <img src="https://www.sfmc-postman.com/stylesheets/crown.svg" alt="" class="d-inline-block crown" width="30" height="24">
+                    <img src="images/mathicon.png" alt="" class="d-inline-block crown" height="24">
                     <ul class="nav col-12 col-md-auto ms-2 mb-2 mb-md-0">
                         <li>Configure sua REST API:</li>
                     </ul>
