--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
         <script type="text/javascript" src="js/require.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"></script>
         <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 	<script>
      // codeInput.registerTemplate("syntax-highlighted", codeInput.templates.hljs(hljs, [new codeInput.plugins.Indent()]));
 	</script>
