--- a/public/index.html
+++ b/public/index.html
@@ -529,58 +529,6 @@
                     </button>
                     <input id="updateTemplateName" type="hidden" name="saveTemplateNameText" class="form-control" placeholder="TEMPLATE NAME" autocomplete="off" style="visibility: hidden;">
                     <!-- End Update current selected template -->
-                    <!-- Start Logging Button/Checkbox -->
-                    <div class="logger" id="logger" onclick="logger(this)">
-                        <div class="switch" id="switch"></div>
-                        <div class="label left">Debug
-                    </div>
-                        <div class="label right">Prod.
-                    </div>
-                    </div>
-                    <input id="LogData" type="checkbox" class="d-none">
-                    <!--<div class="logger" id="logger" onclick="logger(this)">
-                    <div class="switch" id="switch">
-                    </div>
-                    <div class="label left">
-                        <svg
-                                width="18"
-                                height="18"
-                                viewBox="0 0 24 24"
-                                fill="none"
-                                xmlns="http://www.w3.org/2000/svg"
-                        >
-                            <path
-                                    d="M10 11C10 10.4477 10.4477 10 11 10H13C13.5523 10 14 10.4477 14 11C14 11.5523 13.5523 12 13 12H11C10.4477 12 10 11.5523 10 11Z"
-                                    fill="currentColor"
-                            />
-                            <path
-                                    d="M11 14C10.4477 14 10 14.4477 10 15C10 15.5523 10.4477 16 11 16H13C13.5523 16 14 15.5523 14 15C14 14.4477 13.5523 14 13 14H11Z"
-                                    fill="currentColor"
-                            />
-                            <path
-                                    fill-rule="evenodd"
-                                    clip-rule="evenodd"
-                                    d="M9.09447 4.74918C8.41606 4.03243 8 3.0648 8 2H10C10 3.10457 10.8954 4 12 4C13.1046 4 14 3.10457 14 2H16C16 3.0648 15.5839 4.03243 14.9055 4.74918C16.1782 5.45491 17.1673 6.6099 17.6586 8H19C19.5523 8 20 8.44772 20 9C20 9.55229 19.5523 10 19 10H18V12H19C19.5523 12 20 12.4477 20 13C20 13.5523 19.5523 14 19 14H18V16H19C19.5523 16 20 16.4477 20 17C20 17.5523 19.5523 18 19 18H17.6586C16.8349 20.3304 14.6124 22 12 22C9.38756 22 7.16508 20.3304 6.34141 18H5C4.44772 18 4 17.5523 4 17C4 16.4477 4.44772 16 5 16H6V14H5C4.44772 14 4 13.5523 4 13C4 12.4477 4.44772 12 5 12H6V10H5C4.44772 10 4 9.55229 4 9C4 8.44772 4.44772 8 5 8H6.34141C6.83274 6.6099 7.82181 5.45491 9.09447 4.74918ZM8 16V10C8 7.79086 9.79086 6 12 6C14.2091 6 16 7.79086 16 10V16C16 18.2091 14.2091 20 12 20C9.79086 20 8 18.2091 8 16Z"
-                                    fill="currentColor"
-                            />
-                        </svg>
-                    </div>
-                    <div class="label right">
-                        <svg
-                                width="18"
-                                height="18"
-                                viewBox="0 0 24 24"
-                                fill="none"
-                                xmlns="http://www.w3.org/2000/svg"
-                        >
-                            <path d="M9 21.5L17.5 13L13 10L15 2.5L6.5 11L11 14L9 21.5Z" fill="currentColor" />
-                        </svg>
-                    </div>
-                </div> -->
-                    <!--<label class="checkbox-inline" style="border-radius: 0.25rem; border: 1px solid #37414d; height: 37px;">
-                    <span style="padding-right:25px;padding-left: 8px;">Log Data</span>
-                </label>-->
-                    <!-- End Logging Button/Checkbox -->
                 </div>
             </header>
             <div class="row">
@@ -672,7 +620,8 @@
                                 </label>
                                 </div>
                             </div>
-                            <button id="ResetButton" type="button" class="btn btn-danger">Clear</button>
+                            <button id="TestButton" type="button" class="btn btn-success">Testar</button>
+                            <button id="ResetButton" type="button" class="btn btn-danger">Limpar</button>
                         </div>
                         <!-- End API Body -->
                         <!-- Response Variables -->
@@ -901,14 +850,5 @@
             }
         }
 
-        function logger(event) {
-            if (event.classList.contains('off')) {
-                event.classList.remove('off');
-                document.getElementById('LogData').checked = false;
-            } else {
-                event.classList.add('off');
-                document.getElementById('LogData').checked = true;
-            }
-        }
     </script>
 </html>
