--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,10 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
         <!-- Code Mirror -->
         <link rel="stylesheet" href="css/codemirror.css">
+        <link rel="stylesheet" href="css/simplescrollbars.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.4/theme/base16-dark.css">
         <script type="text/javascript" src='js/codemirror.js'></script>
+        <script type="text/javascript" src='js/simplescrollbars.js'></script>
         <script type="text/javascript" src='js/codeeditor.js'></script>
         <!-- jQuery library -->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -28,7 +30,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"></script>
         <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 	<script>
-     // codeInput.registerTemplate("syntax-highlighted", codeInput.templates.hljs(hljs, [new codeInput.plugins.Indent()]));
 	</script>
         <script type="text/javascript">
             (function() {
@@ -603,6 +604,16 @@
                         <!-- API Body -->
                         <div class="tab-pane fadeshow active" id="Body" role="tabpanel" aria-labelledby="body-tab">
                             <textarea class="payload_text_area form-control" placeholder="JSON BODY" rows="100" id="jsonBody"></textarea>
+                            <div id="testHeader">
+                                <div class="title_response">
+                                    <h3 id="testTitle">Test Response</h3>
+                                    <svg xmlns="http://www.w3.org/2000/svg" id="loadResponse" width="24" height="24" viewBox="0 0 24 24"><circle cx="18" cy="12" r="0" fill="white"><animate attributeName="r" begin=".67" calcMode="spline" dur="1.5s" keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8" repeatCount="indefinite" values="0;2;0;0"/></circle><circle cx="12" cy="12" r="0" fill="white"><animate attributeName="r" begin=".33" calcMode="spline" dur="1.5s" keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8" repeatCount="indefinite" values="0;2;0;0"/></circle><circle cx="6" cy="12" r="0" fill="white"><animate attributeName="r" begin="0" calcMode="spline" dur="1.5s" keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8" repeatCount="indefinite" values="0;2;0;0"/></circle></svg>
+                                </div>
+                                <div id="closeTestTab" onclick="closeTestTab()">
+                                    <svg width="24" height="24" viewPort="0 0 12 12" version="1.1" xmlns="http://www.w3.org/2000/svg"><line x1="1" y1="11" x2="11" y2="1" stroke="white" stroke-width="2"/><line x1="1" y1="1" x2="11" y2="11" stroke="white" stroke-width="2"/></svg>
+                                </div>
+                            </div>
+                            <textarea class="response_text_area form-control" id="jsonTestResponse" rows="100"></textarea>
                             <div id="payloadType" class="form-group mt-3">
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" value="application/json" name="DataTypeRadioDefault" id="DataTypeRadioDefault1" checked>
@@ -848,6 +859,12 @@
                     li[i].style.display = "none";
                 }
             }
+        }
+
+        function closeTestTab() {
+            document.getElementById("testHeader").style.display = "none";
+            responsecodeblock.setValue('');
+            responsecodeblock.getWrapperElement().style.display = "none";
         }
 
     </script>
